Fixed menu alignment in Chrome

--- a/demo/css/demo.css
+++ b/demo/css/demo.css
@@ -1,12 +1,13 @@
 #tidy-table {
   font-family: sans-serif;
+  font-size: 14px;
   margin: 10% auto;
-  width: 935px;
+  width: 780px;
 }
 
 .tidy-table select.options {
   float: right;
-  margin: 10px;
+  margin: 10px 0;
   padding: 3px;
 }
 
